# pGHcaller

./: .cproject  .project  INSTALL  Makefile.am  README.md  TODO  bootstrap  common.am  configure.ac  doxygen.config.example
doc/: Makefile.am  git.commands.txt  notes.snippets.txt  notes.test.mpileup.index.txt
doxygen/: mainpage.dox  todolist.dox
doxygen/examples/: PropertyDefinitionExample.cc
m4/: ax_cxx_bool.m4  ax_cxx_compile_stdcxx_11.m4  icc.m4  mpi.m4
man/: Makefile.am
scripts/: Makefile.am  SED_DELETE_LINE.sh  check_output_by_seq.sh  check_output_by_seq_with_names.sh  diff.py  ghcaller  ghcaller.slurm  run.sh  test_output.sh
src/: CAlgorithm.cpp  CAlgorithm.h  CAlgorithmDummy.cpp  CAlgorithmDummy.h  CAlgorithmRoesti.cpp  CAlgorithmRoesti.h  CCommon.h  CFileWriter.cpp  CFileWriter.h  CFileWriterMPIIO.cpp  CFileWriterMPIIO.h  CFilterOptions.h  CFilters.h  CManager.cpp  CManager.h  COptions.cpp  COptions.h  CmdArguments.cpp  CmdArguments.h  Data.h  DummyEventLog.h  Event.h  FastaFile.cpp  FastaFile.h  IAlgorithm.h  Logger.cpp  Logger.h  MFastaFile.cpp  MFastaFile.h  MPEEventLog.h  Makefile.am  MasterWorker.cpp  MasterWorker.h  MpileupParser.cpp  MpileupParser.cpp.BACK  MpileupParser.h  Name.h  PileupFile.cpp  PileupFile.h  PileupFileReader.cpp  (+8 more)
src/deprecated/: CCommon.cpp  Chunk.h  Site.h  calc_p.c  common.cpp  common.h
tests/: Makefile.am  check.sh  create_test  create_test.arguments  create_test.conf  flush_file_cache.c  getopt_long-example.cc  masterworker-pthread.cpp  masterworker.cpp  mpiio_read_test.c  run_test_1.sh  run_test_2.sh  run_test_3.sh  run_test_4.sh  test_A001.00  test_A001.01  test_A001.02  test_A001.03  test_A001.04  test_A001.05  test_A001.06  test_A001.07  test_A002.00  test_A002.01  test_A002.02  test_A002.03  test_A002.04  test_A002.05  test_A002.06  test_A002.07  test_A002.08  test_cmd_arguments.c  test_output.sh  test_succeeded
tests/data/: head.mpileup  head100.mpileup  head15.mpileup  head32.mpileup  head500.mpileup  head500_missing_lines.mpileup  pghcaller.test.5inds.8X.fas
tests/diffseqs/: Makefile.am  diffseqs.cpp
tests/diffseqs/.deps/: diffseqs-diffseqs.Tpo  diffseqs.Po
tests/ghcaller/: Makefile.am  ngh.cpp
tests/ghcaller/.deps/: common.Po  fasta.Po  main.Po  ngh.Po
tests/profile/: TEST001_pghcaller.clog2  TEST001_pghcaller.slog2  TEST002.2_pghcaller.clog2  TEST002.2_pghcaller.slog2  TEST002_pghcaller.clog2  TEST002_pghcaller.slog2  TEST003_pghcaller.clog2  TEST003_pghcaller.slog2
tests/scripts/: extract_seq  run_ghcaller  run_pghcaller  test_runner  test_sequences
