include $(top_srcdir)/common.am

SUBDIRS = ghcaller diffseqs

SUFFIXES = .cpp

TESTS = test_succeeded test_A001.00 test_A001.01 test_A001.02 test_A001.03 test_A001.04 test_A001.05 test_A001.06 test_A001.07 test_A002.00 test_A002.01 test_A002.02 test_A002.03 test_A002.04 test_A002.04 test_A002.05 test_A002.06 test_A002.07 test_A002.08

.PHONY: test-runner
# test-runner:
#	for test in $( test_A001.00 test_A001.01

# this lists the binaries to produce, the (non-PHONY, binary) targets in
# the previous manual Makefile
# bin_PROGRAMS = targetbinary1 targetbinary2 [...] targetbinaryN
# targetbinary1_SOURCES = targetbinary1.c myheader.h [...]

# check_PROGRAMS = masterworker masterworkerthreaded 
# masterworker_SOURCES =          \
#	masterworker.cpp	\
#	$(top_srcdir)/src/Logger.cpp 		\
#	$(top_srcdir)/src/common.cpp		\
#	$(top_srcdir)/src/MasterWorker.cpp
	
#masterworker_CPPFLAGS = $(CPPFLAGS) -I$(top_srcdir)/src
#masterworkerthreaded_SOURCES =          \
#	masterworker-pthread.cpp	\
#	$(top_srcdir)/src/Logger.cpp 		\
#	$(top_srcdir)/src/common.cpp		\
#	$(top_srcdir)/src/MasterWorker.cpp

